[gd_scene load_steps=13 format=3 uid="uid://bou8nu353x5ol"]

[ext_resource type="Texture2D" uid="uid://cx36acoemk37g" path="res://enemies/crawling_enemy.png" id="1_0l54q"]
[ext_resource type="Script" path="res://enemies/crawling_enemy.gd" id="1_c3y37"]
[ext_resource type="PackedScene" uid="uid://didjova8ah46y" path="res://collisions/hurtbox.tscn" id="3_1uwm8"]
[ext_resource type="PackedScene" uid="uid://tkxrr6fs055k" path="res://collisions/hitbox.tscn" id="4_m005m"]
[ext_resource type="Script" path="res://base_stats.gd" id="5_afg38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m6iyy"]
atlas = ExtResource("1_0l54q")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cytut"]
atlas = ExtResource("1_0l54q")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_de86p"]
atlas = ExtResource("1_0l54q")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp4qv"]
atlas = ExtResource("1_0l54q")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7mc6q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6iyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cytut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de86p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp4qv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pniei"]
size = Vector2(14, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4yl7"]
size = Vector2(10, 4)

[node name="CrawlingEnemy" type="Node2D"]
script = ExtResource("1_c3y37")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_7mc6q")
autoplay = "default"
frame_progress = 0.977767

[node name="Hurtbox" parent="." instance=ExtResource("3_1uwm8")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_pniei")

[node name="Hitbox" parent="." instance=ExtResource("4_m005m")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_q4yl7")

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(4, 2.08165e-12)

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(2.08165e-12, 10)

[node name="BaseStats" type="Node" parent="."]
script = ExtResource("5_afg38")
max_health = 2

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="BaseStats" to="." method="_on_base_stats_no_health"]
